--- a/Framework/Template/index.html
+++ b/Framework/Template/index.html
@@ -19,7 +19,7 @@ body{ background-image: URL("<{$WEBROOT}>/Public/bootstrap/img/bg.png"); }
 		<h1>Helloworld!! :)</h1>
 		<p>感谢您使用BPFW！<span class="label label-success">当前版本：<{$version}></span></p>
 		<a href="http://www.i3code.org" target="_blank" class="btn btn-primary btn-large">访问博客</a>
-		<a href="http://www.github.com/bennya8/BPFW" target="_blank" class="btn btn-primary btn-large">获取最新版本</a> 
+		<a href="http://github.com/bennya8/i3code_bpfw" target="_blank" class="btn btn-primary btn-large">获取最新版本</a> 
 	</div>
 </body>
 </html>
