fixed some kind of bugs

--- a/Framework/Template/sample/index.html
+++ b/Framework/Template/sample/index.html
@@ -11,7 +11,7 @@
 <script src="<{$WEBROOT}>/Public/bootstrap/js/bootstrap.min.js"></script>
 <style type="text/css">
 body{ background-image: URL("<{$WEBROOT}>/Public/bootstrap/img/bg.png"); }
-#mainframe {width: 800px; margin: 30px auto;}
+#mainframe {width: 85%; margin: 30px auto;}
 </style>
 </head>
 <body>
